# player

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: log.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/include/libswresample/: version.h
app/src/main/java/com/example/player/: MainActivity.java  VideoAct.java
app/src/main/java/com/example/player/base/: IAdapterView.java  ListAdapter.java  OnItemClickListener.java  OnItemLongClickListener.java
app/src/main/java/com/example/player/filesystem/: FileItemView.java  FileSystemAdapter.java  FileTreeStack.java  FileWrapper.java  SystemFileFilter.java
app/src/main/java/com/example/player/utils/: FileUtils.java
app/src/main/res/color/: selector_list_hint_text.xml  selector_list_title_text.xml
app/src/main/res/drawable/: selector_list_background.xml
app/src/main/res/layout/: activity_main.xml  activity_video.xml  item_local_file.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
